--- a/public/index.html
+++ b/public/index.html
@@ -23,5 +23,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- <script src="https://openlayers.org/en/v4.6.5/build/ol.js"></script> -->
   </body>
 </html>
